--- a/Views/Home/Welcome.cshtml
+++ b/Views/Home/Welcome.cshtml
@@ -9,9 +9,10 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Welcome</title>
+    <link rel="stylesheet" href="~/Content/style.css" />
 </head>
 <body>
-    <div>
+    <div class="welcome-container">
         <h1>Welcome, @ViewBag.Username!</h1>
     </div>
 </body>
